# friendship-optimizer

./: LICENSE  README.md  friendship-bracelets.csv  main.ipynb  pyproject.toml
